fix: aisla puente Rust de APIs preview